[package]
name = "frame-flow"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.5.0"
anyhow = "1.0.44"
serde = { version = "1.0.130", features = ["derive"] }
json5 = "0.3.0"
structopt = "0.3.23"
tch-serde = "0.6.0"
rand = "0.8.4"
itertools = "0.10.1"
iterator-ext = "0.2.0"
unzip-n = "0.1.2"
approx = "0.5.0"
tch-tensor-like = "0.4.0"
tokio = { version = "1.11.0", features = ["fs"] }
tokio-stream = { version = "0.1.7", features = ["fs"] }
futures = "0.3.17"
par-stream = { version = "0.4.0", features = ["runtime_tokio"] }
csv = "1.1.6"
indexmap = "1.7.0"
collected = "0.4.0"
tracing = "0.1.28"
tracing-subscriber = "0.2.23"
# opentelemetry-jaeger = "0.14.0"
# tracing-opentelemetry = "0.13.0"
noisy_float = { version = "0.2.0", features = ["serde"] }
tfrecord = { version = "0.9.0", features = ["full"] }
chrono = "0.4.19"
iii-formosa-dataset = "0.2.0"
glob = "0.3.0"
serde-xml-rs = "0.5.0"
owning_ref = "0.4.1"
mona = "0.1.0"
num-traits = "0.2.14"
by_address = "1.0.4"
serde_json = "1.0.68"
derivative = "2.2.0"
ndarray = "0.15.3"
cv-convert = { version = "0.12.0", default-features = false, features = ["opencv", "tch"] }
num-integer = "0.1.44"

tch-goodies = { version = "0.1.0", git = "https://github.com/jerry73204/yolo-dl.git", rev = "35fde79c70d62fc70f045acc8fee7aa85555298b" }
tch-modules = { version = "0.1.0", git = "https://github.com/jerry73204/yolo-dl.git", rev = "35fde79c70d62fc70f045acc8fee7aa85555298b" }
yolo-dl = { version = "0.1.0", git = "https://github.com/jerry73204/yolo-dl.git", rev = "35fde79c70d62fc70f045acc8fee7aa85555298b" }
train = { version = "0.1.0", git = "https://github.com/jerry73204/yolo-dl.git", rev = "35fde79c70d62fc70f045acc8fee7aa85555298b" }
velcro = "0.5.3"
opencv = "0.54.0"
palette = "0.6.0"

# tch-goodies = { version = "0.1.0", path = "/home/aeon/repos/yolo-dl/tch-goodies" }
# tch-modules = { version = "0.1.0", path = "/home/aeon/repos/yolo-dl/tch-modules" }
# yolo-dl = { version = "0.1.0", path = "/home/aeon/repos/yolo-dl/yolo-dl" }
# train = { version = "0.1.0", path = "/home/aeon/repos/yolo-dl/train" }

[profile.release]
debug = true
debug-assertions = true
overflow-checks = true
## enabling 'lto' improves the performance but results in
## very long compilation time.
lto = false

[profile.release.package."*"]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 3

[profile.release.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 3
