[package]
name = "frame-flow"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.6.1"
anyhow = "1.0.56"
serde = { version = "1.0.136", features = ["derive"] }
json5 = "0.4.1"
structopt = "0.3.26"
tch-serde = "0.7.0"
rand = "0.8.5"
itertools = "0.10.3"
iterator-ext = "0.2.1"
unzip-n = "0.1.2"
approx = "0.5.1"
tch-tensor-like = "0.5.0"
tokio = { version = "1.17.0", features = ["fs"] }
tokio-stream = { version = "0.1.8", features = ["fs"] }
futures = "0.3.21"
par-stream = { version = "0.10.2", features = ["runtime-tokio"] }
csv = "1.1.6"
indexmap = "1.8.0"
collected = "0.4.0"
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
# opentelemetry-jaeger = "0.14.0"
# tracing-opentelemetry = "0.13.0"
noisy_float = { version = "0.2.0", features = ["serde"] }
chrono = "0.4.19"
iii-formosa-dataset = "0.2.0"
glob = "0.3.0"
serde-xml-rs = "0.5.1"
owning_ref = "0.4.1"
mona = "0.1.0"
num-traits = "0.2.14"
by_address = "1.0.4"
serde_json = "1.0.79"
derivative = "2.2.0"
ndarray = "0.15.4"
cv-convert = { version = "0.17.2", default-features = false, features = ["opencv_0-63", "tch_0-6"] }
num-integer = "0.1.44"
velcro = "0.5.3"
opencv = "0.63.0"
palette = "0.6.0"
clap = { version = "3.1.6", features = ["derive"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"

tfrecord = { version = "0.13.0", features = ["full"] }
# tfrecord = { path = "/home/aeon/repos/rust-tfrecord", features = ["full"] }

tch-goodies = { version = "0.1.0", git = "https://github.com/jerry73204/yolo-dl.git", rev = "edf79c828282aaeb7f072c80dbba03b9ac2ae153" }
tch-modules = { version = "0.1.0", git = "https://github.com/jerry73204/yolo-dl.git", rev = "edf79c828282aaeb7f072c80dbba03b9ac2ae153" }
yolo-dl = { version = "0.1.0", git = "https://github.com/jerry73204/yolo-dl.git", rev = "edf79c828282aaeb7f072c80dbba03b9ac2ae153" }
tch-act = { version = "0.1.0", git = "https://github.com/jerry73204/yolo-dl.git", rev = "edf79c828282aaeb7f072c80dbba03b9ac2ae153" }
bbox = { version = "0.1.0", git = "https://github.com/jerry73204/yolo-dl.git", rev = "edf79c828282aaeb7f072c80dbba03b9ac2ae153" }
label = { version = "0.1.0", git = "https://github.com/jerry73204/yolo-dl.git", rev = "edf79c828282aaeb7f072c80dbba03b9ac2ae153" }

# tch-goodies = { version = "0.1.0", path = "/home/aeon/repos/yolo-dl/tch-goodies" }
# tch-modules = { version = "0.1.0", path = "/home/aeon/repos/yolo-dl/tch-modules" }
# yolo-dl = { version = "0.1.0", path = "/home/aeon/repos/yolo-dl/yolo-dl" }
# bbox = { version = "0.1.0", path = "/home/aeon/repos/yolo-dl/bbox" }
# label = { version = "0.1.0", path = "/home/aeon/repos/yolo-dl/label" }
# tch-act = { version = "0.1.0", path = "/home/aeon/repos/yolo-dl/tch-act" }

[profile.release]
debug = true
debug-assertions = true
overflow-checks = true
## enabling 'lto' improves the performance but results in
## very long compilation time.
lto = false

[profile.release.package."*"]
debug = true
debug-assertions = false
overflow-checks = false
opt-level = 3

[profile.release.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 3
